# Meteostuff

edge2nc/: Makefile  README  edge2nc.c
edge2nc/etor-v1.3/: CHANGES  Makefile  RSL_to_EDGE.c  antenna.h  bitx.c  bitx.h  crc.c  (+25 more)
gribdb/: Makefile  db2fcst.cpp  earthmap.cpp  earthmap.h  grib2db.cpp  grib2ncfcst.cpp  grib2ncfcst.sql  griblib.cpp  griblib.h  place2db.cpp  places.cpp  places.h  suntime.cpp  suntime.h  thiresias.sql  weather.cpp  weather.h
hydrometeor/: Makefile  dSFMT.cpp  dSFMT.h  hydrometeor.cpp  hydrometeor.h  hydropsd.cpp  hydropsd.h  random.cpp  random.h  refindex.cpp  refindex.h
libmeteosalute/: Makefile.am  README  clomin.cpp  configure  configure.in  dirspeed.cpp  hi.cpp  humidex.cpp  meteosalute.cpp  meteosalute.h  net.cpp  new_variable.cpp  pmv_HOPPE_ISO.cpp  poda.cpp  ppd.cpp  radteoric.cpp  rdiffuse.cpp  ssi.cpp  steadman_indoor.cpp  steadman_outdoor_shade.cpp  steadman_outdoor_sun.cpp  sunelev.cpp  tapparent.cpp  temprad.cpp  tempradsoil.cpp  thom.cpp  utci.cpp  utils.cpp  wbgt.cpp  wellness.cpp
libmeteosalute/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libpsychrometric/: COPYING  Makefile.am  Makefile.in  configure.in  psychrofunctions.c  psychrometric.c  psychrometric.h
nc2d_to_image/: Makefile  image_to_nc.cpp  nc_to_image.cpp
radar/: Makefile  polarimetric_radar.cpp  polarimetric_radar.h  radarband.cpp  radarband.h  radargeom.cpp  radargeom.h
scattering/: Makefile  bessel.cpp  bessel.h  gauss.cpp  gauss.h  invert.cpp  invert.h  particle.cpp  particle.h  radiation.h  simplecomplex.h  tmatrix.cpp  tmatrix.h
