
meteosalute_lib = libmeteosalute.la

lib_LTLIBRARIES = $(meteosalute_lib)

libmeteosalute_la_SOURCES = meteosalute.cpp \
    clomin.cpp ppd.cpp poda.cpp hi.cpp sunelev.cpp tempradsoil.cpp \
    dirspeed.cpp radteoric.cpp tapparent.cpp utils.cpp \
    pmv_HOPPE_ISO.cpp rdiffuse.cpp temprad.cpp wellness.cpp  \
    humidex.cpp net.cpp ssi.cpp thom.cpp wbgt.cpp utci.cpp \
    steadman_indoor.cpp steadman_outdoor_sun.cpp \
    steadman_outdoor_shade.cpp new_variable.cpp

nobase_include_HEADERS = meteosalute.h
